# transcoding

./: .gitignore  CMakeLists.txt  build.sh  clear.sh  config.h.in  sonar-project.properties
cmake/: cc-android.cmake
include/: filtering_video.h  muxing.h  transcoding.h  utils.h  yuv2h264.h
src/: filtering_video.c  main.c  mixing.c  muxing.c  remuxing.c  transcoding.c  utils.c  yuv2h264.c
tests/: CMakeLists.txt  main.c
